--- a/AmazonLinux2/templates/sysctl.conf
+++ b/AmazonLinux2/templates/sysctl.conf
@@ -111,4 +111,19 @@ net.ipv6.conf.default.disable_ipv6 = 1
 net.ipv6.conf.lo.disable_ipv6 = 1
 
 fs.suid_dumpable = 0
+dev.tty.ldisc_autoload = 0
+fs.protected_regular = 2
+fs.protected_fifos = 2
+kernel.dmesg_restrict = 1
+kernel.kptr_restrict = 2
+kernel.modules_disabled = 1
+kernel.perf_event_paranoid = 3
+kernel.sysrq = 0
+kernel.unprivileged_bpf_disabled = 1
+kernel.yama.ptrace_scope = 1
+net.core.bpf_jit_harden = 2
+net.ipv6.conf.all.accept_redirects = 0
+net.ipv6.conf.default.accept_redirects = 0
+net.ipv4.conf.all.bootp_relay = 0
+net.ipv4.conf.default.accept_redirects = 0
 
